--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.3",
+    "react-native-web": "^0.19.7",
+    "undefined": "expo/webpack-config"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
